fixed  issue where projects page was getting cut off on smaller screen sizes

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ h2 {
 
 #projects {
     width: 100%;
-    height: 120%;
+    height: 1200px;
     overflow: hidden;
 
     text-align: center;
